# zarc

./: .gitignore  README.md
CAD/: README.md
CAD/Hall effect sensor holder circuit board/: Hall-effect_sensor_holder.PcbDoc  Hall-effect_sensor_holder.PrjPcb  Hall-effect_sensor_holder.PrjPcbStructure  Hall-effect_sensor_holder.SchDoc
CAD/ZARC front and back wheel mechanical parts/: ZARC_front_wheel_sensor_mount.SLDPRT  sensor mount ZARC left side v1.1.SLDPRT  sensor mount ZARC right side v1.1.SLDPRT
CAD/ZARC_customPCB/: BARC_circuitry.PcbDoc  BARC_circuitry.PrjPcb  BARC_mounting_circuitry.SchDoc  IDSC Default Output Job File.OutJob
CAD/ZARC_customPCB/__Previews/: BARC_circuitry.PcbDocPreview  BARC_mounting_circuitry.SchDocPreview
CAD/ZARC_frontWheelEncoderMount/: ZARC_frontWheelEncoderMount.SLDPRT
CAD/ZARC_mountDeck/: ZARC_mountDeck.SLDPRT
CAD/ZARC_rearWheelEncoderMount/: ZARC_rearWheelEncoderMount(right).SLDPRT
MATLAB/visualization/: README.md  TireParameters.m  getLabels.m  plotSteeringAngle.m  plotSteeringAngle_v2.m  visualizeVelocities.m  visualize_IMU.m  visualize_Velocities.m
arduino/arduino_nano328_node/: arduino_nano328_node.ino
compiled_arduino_libs/ros_lib/barc/: ECU.h  Encoder.h  Ultrasound.h  Velocity.h  Z_KinBkMdl.h
compiled_arduino_libs/ros_lib/data_service/: CustomSignal.h  DataForward.h  DataRetrieve.h  RegisterExperiment.h  RegisterSetting.h  RegisterVideo.h  TimeData.h  TimeSeries.h  TimeSignal.h
compiled_arduino_libs/ros_lib/ecu_input/: ECU.h
compiled_arduino_libs/ros_lib/marvelmind_nav/: hedge_pos.h
compiled_arduino_libs/ros_lib/simulator/: Z_DynBkMdl.h  eZ_DynBkMdl.h
docs/: ZARC TODO list.md
docs/ZARC Source Files/ZARC System Identification/: database.bib  main.tex
workspace/: .gitignore
workspace/logs/myahrs_driver/: build.cmake.000.log.stderr
workspace/logs/rqt_image_view/: build.cmake.000.log.stderr
workspace/src/barc/: CMakeLists.txt
workspace/src/barc/launch/: demo.launch  forward_vel.launch  node.launch
workspace/src/barc/msg/: Acceleration.msg  RC_inputs.msg  Time.msg  Velocity.msg
workspace/src/barc/src/: Encoder_Dummy.py  controller_rc.py  controller_rc_demo.py  controller_rc_demo_gui.py  forward_vel.py
workspace/src/data_logging/: CMakeLists.txt  package.xml
workspace/src/data_logging/bags/: enc+imu.bag  vicon.bag
workspace/src/data_logging/config/: config.yaml  example.yaml  logger.config  odroidLogger.yaml  viconLogger.yaml
workspace/src/data_logging/include/: encoder_data_logger.h  imu_data_logger.h  logger.h  logger_factory.h  vicon_data_logger.h
workspace/src/data_logging/src/: encoder_data_logger.cpp  imu_data_logger.cpp  logger_node.cpp  logger_node.cpp.orig  logging_node.cpp  odroid_logging_node.cpp  vicon_data_logger.cpp  vicon_logging_node.cpp
workspace/src/ecu_input/: CMakeLists.txt  package.xml
workspace/src/ecu_input/scripts/: custom_signal.py
workspace/src/node_example/: CMakeLists.txt  README.md
workspace/src/node_example/cfg/: nodeExample.cfg
workspace/src/node_example/msg/: ECU.msg
workspace/src/node_example/src/: pylistener.py  pytalker.py
workspace/src/node_example1/src/: pylistener.py  pytalker.py
workspace/src/zarc_gui/: CMakeLists.txt  package.xml
workspace/src/zarc_gui/cfg/: zarc_gui.cfg
(+30 files in other folders)
