<package>
  <name>data_logger</name>
  <version>1.0.1</version>
  <description>

     this is my hacky stuff for logging data from the vicon system.

  </description>
  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
  <license>BSD, based on vicon_mocap from the starmac stacks </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
</package>


